[gd_scene load_steps=28 format=3]

[ext_resource type="Script" path="res://platformer/characters/luna/Luna.gd" id="1_qh012"]
[ext_resource type="PackedScene" uid="uid://bpr5awoe2ffv" path="res://platformer/characters/luna/Spell.tscn" id="2_8vcsm"]
[ext_resource type="Texture2D" uid="uid://dkm8lgiwx8w00" path="res://assets/luna/attack/attack_000.png" id="3_oug56"]
[ext_resource type="Texture2D" uid="uid://djlphpgqifihs" path="res://assets/luna/attack/attack_001.png" id="4_l322y"]
[ext_resource type="Texture2D" uid="uid://chbu8dlhpn0un" path="res://assets/luna/attack/attack_002.png" id="5_nohqe"]
[ext_resource type="Texture2D" uid="uid://cwwt7h2s0divj" path="res://assets/luna/attack/attack_003.png" id="6_gx382"]
[ext_resource type="Texture2D" uid="uid://boyqk2f122278" path="res://assets/luna/attack/attack_004.png" id="7_lwxis"]
[ext_resource type="Texture2D" uid="uid://dju53dw3b01al" path="res://assets/luna/hurt/hurt_000.png" id="8_aud4g"]
[ext_resource type="Texture2D" uid="uid://cp5xkuu2euyul" path="res://assets/luna/idle/idle_000.png" id="8_l8v0y"]
[ext_resource type="Texture2D" uid="uid://cgvnu0rcpv58v" path="res://assets/luna/idle/idle_001.png" id="9_n32sg"]
[ext_resource type="Texture2D" uid="uid://byfj77256v3fl" path="res://assets/luna/hurt/hurt_001.png" id="9_wntmh"]
[ext_resource type="Texture2D" uid="uid://b6gbh2m25klp3" path="res://assets/luna/idle/idle_002.png" id="10_mq2su"]
[ext_resource type="Texture2D" uid="uid://b03glpatffa58" path="res://assets/luna/hurt/hurt_005.png" id="10_oy1gh"]
[ext_resource type="Texture2D" uid="uid://cf6qhhg8t03f3" path="res://assets/luna/hurt/hurt_002.png" id="10_pfmlf"]
[ext_resource type="Texture2D" uid="uid://bqn2ddftog4ov" path="res://assets/luna/jump/jump_001_m.png" id="11_agkt0"]
[ext_resource type="Texture2D" uid="uid://cov866weyy7bf" path="res://assets/luna/hurt/hurt_003.png" id="11_dvalt"]
[ext_resource type="Texture2D" uid="uid://dkrauw40a2idb" path="res://assets/luna/hurt/hurt_006.png" id="11_vxa4t"]
[ext_resource type="Texture2D" uid="uid://rmbueqabdgjg" path="res://assets/luna/run/run_000.png" id="12_ljbtd"]
[ext_resource type="Texture2D" uid="uid://dcax75eu0h3fs" path="res://assets/luna/hurt/hurt_004.png" id="12_stp7x"]
[ext_resource type="Texture2D" uid="uid://b7ujf2w76y65l" path="res://assets/luna/run/run_001.png" id="13_jitql"]
[ext_resource type="Texture2D" uid="uid://j0f8lmk7a778" path="res://assets/luna/run/run_002.png" id="14_rns6f"]
[ext_resource type="Texture2D" uid="uid://0v7c4dqdh8bp" path="res://assets/luna/run/run_003.png" id="15_kx2ak"]
[ext_resource type="Texture2D" uid="uid://ba72btu5moipx" path="res://assets/luna/run/run_004.png" id="16_w4jqo"]
[ext_resource type="Texture2D" uid="uid://cl7e0d1ybarps" path="res://assets/luna/run/run_005.png" id="17_oqcl7"]
[ext_resource type="Script" path="res://platformer/characters/luna/LunaAnimate.gd" id="25_5l2ur"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_aikpy"]
radius = 32.0
height = 178.0

[sub_resource type="SpriteFrames" id="SpriteFrames_cii11"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_oug56")
}, {
"duration": 1.0,
"texture": ExtResource("4_l322y")
}, {
"duration": 1.0,
"texture": ExtResource("5_nohqe")
}, {
"duration": 1.0,
"texture": ExtResource("6_gx382")
}, {
"duration": 1.0,
"texture": ExtResource("7_lwxis")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_dvalt")
}, {
"duration": 1.0,
"texture": ExtResource("12_stp7x")
}, {
"duration": 1.0,
"texture": ExtResource("10_oy1gh")
}, {
"duration": 1.0,
"texture": ExtResource("11_vxa4t")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_aud4g")
}, {
"duration": 1.0,
"texture": ExtResource("9_wntmh")
}, {
"duration": 1.0,
"texture": ExtResource("10_pfmlf")
}, {
"duration": 1.0,
"texture": ExtResource("11_dvalt")
}, {
"duration": 1.0,
"texture": ExtResource("12_stp7x")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_l8v0y")
}, {
"duration": 1.0,
"texture": ExtResource("9_n32sg")
}, {
"duration": 1.0,
"texture": ExtResource("10_mq2su")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_agkt0")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_ljbtd")
}, {
"duration": 1.0,
"texture": ExtResource("13_jitql")
}, {
"duration": 1.0,
"texture": ExtResource("14_rns6f")
}, {
"duration": 1.0,
"texture": ExtResource("15_kx2ak")
}, {
"duration": 1.0,
"texture": ExtResource("16_w4jqo")
}, {
"duration": 1.0,
"texture": ExtResource("17_oqcl7")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[node name="Luna" type="CharacterBody2D" groups=["character"]]
position = Vector2(-21, 8)
collision_layer = 2
collision_mask = 5
script = ExtResource("1_qh012")
spell = ExtResource("2_8vcsm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("CapsuleShape2D_aikpy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-4.4125, 0)
scale = Vector2(0.13, 0.13)
sprite_frames = SubResource("SpriteFrames_cii11")
animation = &"idle"
script = ExtResource("25_5l2ur")

[connection signal="animation_finished" from="AnimatedSprite2D" to="AnimatedSprite2D" method="_on_animation_finished"]
[connection signal="cast_spell" from="AnimatedSprite2D" to="." method="_cast_spell"]
[connection signal="died" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_died"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="AnimatedSprite2D" method="_on_frame_changed"]
